# mysite

./: devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: log.txt  orders-fixture.json  quieries.sql  requirements.txt  shopapp-fixtures.json
mysite/blogapp/: forms.py  models.py  urls.py  views.py
mysite/blogapp/management/commands/: create_author.py  create_category.py  create_tag.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_form.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: views.py
mysite/myauth/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_product_user.py  0006_remove_product_user_order_user.py  0007_order_products.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_order_options_alter_product_options.py  0012_alter_product_description_alter_product_name.py
(+32 files in other folders)
