[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Вячеслав Янушкевич <cool.9nyw@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-filter = "^23.2"
docutils = "^0.20.1"
drf-spectacular = "^0.26.4"
flake8 = "^6.1.0"
flake8-docstrings = "^1.7.0"
gunicorn = "^21.2.0"
inflection = "^0.5.1"
jsonschema = "^4.19.0"
jsonschema-specifications = "^2023.7.1"
mccabe = "^0.7.0"
packaging = "^23.1"
pillow = "^10.0.0"
pycodestyle = "^2.11.0"
pydocstyle = "^6.3.0"
pyflakes = "^3.1.0"
pytz = "^2023.3"
pyyaml = "^6.0.1"
referencing = "^0.30.2"
rpds-py = "^0.9.2"
sentry-sdk = "^1.29.2"
snowballstemmer = "^2.2.0"
sql = "^2022.4.0"
sqlparse = "^0.4.4"
typing-extensions = "^4.7.1"
uritemplate = "^4.1.1"
urllib3 = "^2.0.4"
certifi = "^2023.7.22"
attrs = "^23.1.0"
asgiref = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
